--- a/src/Core/wwwroot/components/app/app.template.html
+++ b/src/Core/wwwroot/components/app/app.template.html
@@ -36,7 +36,7 @@
                     <tr>
                         <td>[[terminal.name]]</td>
                         <td>
-                            <a href="http://[[terminal.name]].box.termy.in/">http://[[terminal.name]].box.termy.in/</a>
+                            <a href="https://[[terminal.name]].box.termy.in/">https://[[terminal.name]].box.termy.in/</a>
                         </td>
                         <td>[[terminal.externalip]]</td>
                         <td>
