--- a/src/Core/wwwroot/components/app/app.template.html
+++ b/src/Core/wwwroot/components/app/app.template.html
@@ -11,7 +11,7 @@
         <paper-input id="terminalPort" label="Port"></paper-input>
         <paper-input id="terminalPassword" label="Password" type="password"></paper-input>
         <paper-input id="terminalShell" label="Shell"></paper-input>
-        <paper-textarea id="terminalCommand" label="Start Command"></paper-input>
+        <paper-textarea id="terminalCommand" label="Start Command"></paper-textarea>
 
         <br />
         <br />
